<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/littleblue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sql_previous"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/table_record"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/lightblue" />

        <ImageView
            android:id="@+id/image_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sql_next"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/tableRowList"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/white"></ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete"
            style="@style/button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"></Button>

        <Button
            android:id="@+id/btn_close"
            style="@style/button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />
    </LinearLayout>

</LinearLayout>